--- a/assets/data/songs/tutorial/easy.json
+++ b/assets/data/songs/tutorial/easy.json
@@ -1,691 +1,547 @@
 {
-	"song": {
-		"name": "tutorial",
-		"bpm": 100,
-		"needsVoices": false,
-		"speed": 1.5,
-		"stage": "demo-stage",
-		"playLength": 2,
-		"activePlayer": 1,
-		"characters": [
-			{
-				"name": "gf",
-				"x": 400,
-				"y": 130
-			},
-			{
-				"name": "bf",
-				"x": 770,
-				"y": 450
-			}
-		],
-		"renderBackwards": true,
-		"startDelay": 0,
-		"notes": [
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [
-					[
-						64,
-						0,
-						0,
-						0
-					],
-					[
-						72,
-						3,
-						0,
-						0
-					]
-				],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [
-					[
-						80,
-						0,
-						0,
-						0
-					],
-					[
-						88,
-						3,
-						0,
-						0
-					]
-				],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [
-					[
-						96,
-						0,
-						0,
-						1
-					],
-					[
-						104,
-						3,
-						0,
-						1
-					]
-				],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [
-					[
-						112,
-						0,
-						0,
-						1
-					],
-					[
-						120,
-						3,
-						0,
-						1
-					]
-				],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [
-					[
-						128,
-						2,
-						0,
-						0
-					],
-					[
-						136,
-						1,
-						0,
-						0
-					]
-				],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [
-					[
-						144,
-						2,
-						0,
-						0
-					],
-					[
-						152,
-						1,
-						0,
-						0
-					]
-				],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [
-					[
-						160,
-						2,
-						0,
-						1
-					],
-					[
-						168,
-						1,
-						0,
-						1
-					]
-				],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [
-					[
-						176,
-						2,
-						0,
-						1
-					],
-					[
-						184,
-						1,
-						0,
-						1
-					]
-				],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [
-					[
-						192,
-						0,
-						0,
-						0
-					],
-					[
-						200,
-						2,
-						0,
-						0
-					]
-				],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [
-					[
-						208,
-						1,
-						0,
-						0
-					],
-					[
-						216,
-						3,
-						0,
-						0
-					]
-				],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [
-					[
-						224,
-						0,
-						0,
-						1
-					],
-					[
-						232,
-						2,
-						0,
-						1
-					]
-				],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [
-					[
-						240,
-						1,
-						0,
-						1
-					],
-					[
-						248,
-						3,
-						0,
-						1
-					]
-				],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [
-					[
-						256,
-						1,
-						0,
-						0
-					],
-					[
-						260,
-						1,
-						0,
-						0
-					],
-					[
-						264,
-						2,
-						0,
-						0
-					]
-				],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [
-					[
-						272,
-						1,
-						0,
-						0
-					],
-					[
-						276,
-						1,
-						0,
-						0
-					],
-					[
-						280,
-						3,
-						0,
-						0
-					]
-				],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [
-					[
-						288,
-						1,
-						0,
-						1
-					],
-					[
-						292,
-						1,
-						0,
-						1
-					],
-					[
-						296,
-						2,
-						0,
-						1
-					]
-				],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [
-					[
-						304,
-						1,
-						0,
-						1
-					],
-					[
-						308,
-						1,
-						0,
-						1
-					],
-					[
-						312,
-						3,
-						0,
-						1
-					]
-				],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [
-					[
-						320,
-						1,
-						0,
-						0
-					],
-					[
-						322,
-						2,
-						0,
-						0
-					],
-					[
-						324,
-						3,
-						0,
-						0
-					],
-					[
-						326,
-						2,
-						0,
-						0
-					],
-					[
-						332,
-						3,
-						0,
-						0
-					]
-				],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [
-					[
-						336,
-						1,
-						0,
-						1
-					],
-					[
-						338,
-						2,
-						0,
-						1
-					],
-					[
-						340,
-						3,
-						0,
-						1
-					],
-					[
-						342,
-						2,
-						0,
-						1
-					],
-					[
-						348,
-						3,
-						0,
-						1
-					]
-				],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [
-					[
-						352,
-						0,
-						3,
-						1
-					],
-					[
-						356,
-						3,
-						3,
-						1
-					],
-					[
-						360,
-						1,
-						3,
-						1
-					],
-					[
-						364,
-						2,
-						3,
-						1
-					]
-				],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [
-					[
-						368,
-						0,
-						3,
-						1
-					],
-					[
-						372,
-						3,
-						3,
-						1
-					],
-					[
-						376,
-						0,
-						3,
-						1
-					],
-					[
-						380,
-						2,
-						3,
-						1
-					]
-				],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [
-					[
-						384,
-						1,
-						14,
-						1
-					]
-				],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [
-					[
-						416,
-						0,
-						0,
-						1
-					],
-					[
-						417,
-						1,
-						0,
-						1
-					],
-					[
-						418,
-						3,
-						0,
-						1
-					],
-					[
-						419,
-						2,
-						0,
-						1
-					],
-					[
-						420,
-						3,
-						0,
-						1
-					],
-					[
-						421,
-						1,
-						0,
-						1
-					],
-					[
-						422,
-						0,
-						0,
-						1
-					],
-					[
-						423,
-						1,
-						0,
-						1
-					],
-					[
-						424,
-						3,
-						0,
-						1
-					],
-					[
-						425,
-						2,
-						0,
-						1
-					],
-					[
-						426,
-						3,
-						0,
-						1
-					],
-					[
-						427,
-						1,
-						0,
-						1
-					],
-					[
-						428,
-						0,
-						0,
-						1
-					],
-					[
-						429,
-						3,
-						0,
-						1
-					],
-					[
-						430,
-						2,
-						0,
-						1
-					],
-					[
-						431,
-						3,
-						0,
-						1
-					]
-				],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 1
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			},
-			{
-				"sectionNotes": [],
-				"cameraFacing": 0
-			}
-		]
-	}
+	"startDelay": 0,
+	"renderBackwards": true,
+	"characters": [
+		{
+			"x": 400,
+			"name": "gf",
+			"y": 130
+		},
+		{
+			"x": 770,
+			"name": "bf",
+			"y": 450
+		}
+	],
+	"name": "tutorial",
+	"hasVoices": false,
+	"sections": [
+		{
+			"notes": [],
+			"cameraFacing": 0
+		},
+		{
+			"notes": [],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [],
+			"cameraFacing": 0
+		},
+		{
+			"notes": [],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 0,
+					"strumTime": 0,
+					"player": 0,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 3,
+					"strumTime": 8,
+					"player": 0,
+					"type": 0
+				}
+			],
+			"cameraFacing": 0
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 0,
+					"strumTime": 0,
+					"player": 0,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 3,
+					"strumTime": 8,
+					"player": 0,
+					"type": 0
+				}
+			],
+			"cameraFacing": 0
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 0,
+					"strumTime": 0,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 3,
+					"strumTime": 8,
+					"player": 1,
+					"type": 0
+				}
+			],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 0,
+					"strumTime": 0,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 3,
+					"strumTime": 8,
+					"player": 1,
+					"type": 0
+				}
+			],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 2,
+					"strumTime": 0,
+					"player": 0,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 8,
+					"player": 0,
+					"type": 0
+				}
+			],
+			"cameraFacing": 0
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 2,
+					"strumTime": 0,
+					"player": 0,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 8,
+					"player": 0,
+					"type": 0
+				}
+			],
+			"cameraFacing": 0
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 2,
+					"strumTime": 0,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 8,
+					"player": 1,
+					"type": 0
+				}
+			],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 2,
+					"strumTime": 0,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 8,
+					"player": 1,
+					"type": 0
+				}
+			],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 0,
+					"strumTime": 0,
+					"player": 0,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 2,
+					"strumTime": 8,
+					"player": 0,
+					"type": 0
+				}
+			],
+			"cameraFacing": 0
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 0,
+					"player": 0,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 3,
+					"strumTime": 8,
+					"player": 0,
+					"type": 0
+				}
+			],
+			"cameraFacing": 0
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 0,
+					"strumTime": 0,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 2,
+					"strumTime": 8,
+					"player": 1,
+					"type": 0
+				}
+			],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 0,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 3,
+					"strumTime": 8,
+					"player": 1,
+					"type": 0
+				}
+			],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 0,
+					"player": 0,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 4,
+					"player": 0,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 2,
+					"strumTime": 8,
+					"player": 0,
+					"type": 0
+				}
+			],
+			"cameraFacing": 0
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 0,
+					"player": 0,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 4,
+					"player": 0,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 3,
+					"strumTime": 8,
+					"player": 0,
+					"type": 0
+				}
+			],
+			"cameraFacing": 0
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 0,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 4,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 3,
+					"strumTime": 8,
+					"player": 1,
+					"type": 0
+				}
+			],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 0,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 4,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 2,
+					"strumTime": 8,
+					"player": 1,
+					"type": 0
+				}
+			],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 0,
+					"player": 0,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 2,
+					"strumTime": 2,
+					"player": 0,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 3,
+					"strumTime": 4,
+					"player": 0,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 2,
+					"strumTime": 6,
+					"player": 0,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 3,
+					"strumTime": 12,
+					"player": 0,
+					"type": 0
+				}
+			],
+			"cameraFacing": 0
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 0,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 2,
+					"strumTime": 2,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 3,
+					"strumTime": 4,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 2,
+					"strumTime": 6,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 3,
+					"strumTime": 12,
+					"player": 1,
+					"type": 0
+				}
+			],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 0,
+					"strumTime": 0,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 3,
+					"strumTime": 4,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 8,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 2,
+					"strumTime": 12,
+					"player": 1,
+					"type": 0
+				}
+			],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [
+				{
+					"length": 0,
+					"column": 3,
+					"strumTime": 0,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 1,
+					"strumTime": 4,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 0,
+					"strumTime": 8,
+					"player": 1,
+					"type": 0
+				},
+				{
+					"length": 0,
+					"column": 2,
+					"strumTime": 12,
+					"player": 1,
+					"type": 0
+				}
+			],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [
+				{
+					"length": 7,
+					"column": 1,
+					"strumTime": 0,
+					"player": 1,
+					"type": 0
+				}
+			],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [],
+			"cameraFacing": 0
+		},
+		{
+			"notes": [],
+			"cameraFacing": 1
+		},
+		{
+			"notes": [],
+			"cameraFacing": 0
+		},
+		{
+			"notes": [],
+			"cameraFacing": 1
+		}
+	],
+	"stage": "demo-stage",
+	"characterCharts": 2,
+	"activePlayer": 1,
+	"BPM": 100,
+	"speed": 1.7
 }
